--- a/.github/workflows/github-action.yml
+++ b/.github/workflows/github-action.yml
@@ -1,5 +1,5 @@
 name: GitHub Actions Demo
-run-name: ${{ github.actor }} in actions 🚀
+run-name: ${{secrets.USERNAME}} in actions 🚀
 on: 
     push:
       branches:
@@ -12,7 +12,7 @@ jobs:
         uses: actions/checkout@v4
       - name: Build and tag docker image
         run: |
-          docker build -t ${{secrets.USERNAME}}/action-project2:v1 -f Dockerfile
+          docker build -t ${{secrets.USERNAME}}/action-project2:v1 -f Dockerfile .
 
       - name: Push to Dockerhub
         run: |
